# gcalc

./: README.md  gcalc.code-workspace  pyproject.toml
gcalc/core/: central.py
