[project]
name = "gcalc"
version = "0.1.0"
description = "Gavin's Math Calculator"
readme = "README.md"
requires-python = ">=3.13"
license-files = ["COPYING"]
authors = [
    {name = "gi-b716", email = "sganyunchi@163.com"}
]
dependencies = []

[project.urls]
Homepage = "https://github.com/gi-b716/gcalc"
Documentation = "https://github.com/gi-b716/gcalc/blob/main/README.md"
Repository = "https://github.com/gi-b716/gcalc.git"
"Bug Tracker" = "https://github.com/gi-b716/gcalc/issues"
